--- a/src/app/pages/manga-detail/manga-detail.component.html
+++ b/src/app/pages/manga-detail/manga-detail.component.html
@@ -4,7 +4,7 @@
     <button mat-icon-button (click)="refresh()">
       <mat-icon>refresh</mat-icon>
     </button>
-    <button mat-icon-button>
+    <button mat-icon-button [matMenuTriggerFor]="optionMenu">
       <mat-icon>more_vert</mat-icon>
     </button>
   </div>
