[wip] add badge to card

--- a/src/app/components/manga-card/manga-card.component.html
+++ b/src/app/components/manga-card/manga-card.component.html
@@ -1,4 +1,5 @@
-<div class="card-manga" >
+<div class="card-manga">
+  <div class="card-badge" *ngIf="badge">{{badge}}</div>
   <img src="{{manga.thumbnailUrl}}" alt="{{manga.title}}" style="width: 100%"/>
   <div class="manga-title">{{manga.title | maxLength: 30}}</div>
 </div>
