add badge to card

--- a/src/app/components/manga-list/manga-list.component.html
+++ b/src/app/components/manga-list/manga-list.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="3" rowHeight="2:3" gutterSize="0.5em">
   <mat-grid-tile *ngFor="let manga of mangaList">
-    <app-manga-card [badge]="'cd'" [manga]="manga" (click)="mangaClick.emit(manga)"></app-manga-card>
+    <app-manga-card [badge]="(manga.latestChapter?.chapterNumber ?? 0) - (manga.readChapters[0] ?? 0)" [manga]="manga" (click)="mangaClick.emit(manga)"></app-manga-card>
   </mat-grid-tile>
 </mat-grid-list>
 <div class="button-group" *ngIf="showLoadMore" style="text-align: center; margin: 15px">
