--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,8 @@ body {
 
 .card-badge {
   position: absolute;
+  top: 0;
+  left: 0;
   height: 18px;
   background-color: blueviolet;
   font-size: 8px;
