--- a/src/app/components/manga-card/manga-card.component.html
+++ b/src/app/components/manga-card/manga-card.component.html
@@ -1,5 +1,5 @@
 <div class="card-manga">
-  <div class="card-badge" *ngIf="badge">{{badge}}</div>
   <img src="{{manga.thumbnailUrl}}" alt="{{manga.title}}" style="width: 100%"/>
+  <p class="card-badge" *ngIf="badge">{{badge}}</p>
   <div class="manga-title">{{manga.title | maxLength: 30}}</div>
 </div>
