--- a/src/app/pages/updates/updates.component.html
+++ b/src/app/pages/updates/updates.component.html
@@ -1,11 +1,13 @@
-<app-header><span>Updates</span>
+<app-header>
+  <span>Updates</span>
   <div right>
-    <button mat-icon-button>
+    <button mat-icon-button (click)="updateManga()">
       <mat-icon>refresh</mat-icon>
     </button>
   </div>
 </app-header>
 <div class="content">
+  <span class="mat-caption" *ngIf="updatedMangaTitle">Updated: {{updatedMangaTitle}}</span>
   <ng-container *ngFor="let mangaList of groupedByDateMangaLists">
     <h4 class="mat-subheading-1">{{mangaList[0]?.latestChapter?.dateUpload! | relativeDate}}</h4>
     <ng-container *ngFor="let manga of mangaList">
