--- a/src/app/pages/reader/reader.component.scss
+++ b/src/app/pages/reader/reader.component.scss
@@ -51,3 +51,11 @@
   }
 }
 
+.reading-page-status{
+  position: fixed;
+  text-align: center;
+  bottom: 0.5em;
+  left: 0;
+  right: 0;
+  text-shadow: 1px 1px 2px black;
+}
