--- a/src/app/pages/browser/browser.component.html
+++ b/src/app/pages/browser/browser.component.html
@@ -15,7 +15,7 @@
   </mat-form-field>
   <div right>
     <button *ngIf="!searching && activeTab == 0" mat-icon-button (click)="toggleSearching(true)">
-      <mat-icon>search</mat-icon>
+      <mat-icon>travel_explore</mat-icon>
     </button>
     <button mat-icon-button (click)="refresh()">
       <mat-icon>refresh</mat-icon>
