fix bug reading page not changed

--- a/src/app/pages/reader/reader.component.html
+++ b/src/app/pages/reader/reader.component.html
@@ -21,9 +21,7 @@
         <ng-container *ngFor="let page of pages;let i = index">
           <div class="page-container" id="page-{{i+1}}"
                (click)="readingPageIndex = i+1;pageClick($event)"
-               (wheel)="readingPageIndex = i+1"
-               (touchstart)="readingPageIndex = i+1"
-          >
+               (touchstart)="readingPageIndex = i+1">
             <img reloadViaProxyOnError [headers]="engine.source.parser?.headerBuilder()" src="{{page.url}}"
                  alt="{{page.name}}"/>
           </div>
